--- a/MovieRentalOnline/MovieRentalOnline/Views/Actor/Index.cshtml
+++ b/MovieRentalOnline/MovieRentalOnline/Views/Actor/Index.cshtml
@@ -1,33 +1,60 @@
 ﻿@model IEnumerable<MovieRentalOnline.Models.Actor>
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<div>
-    <table class="table">
-        <thead>
-            {
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Birth Date</th>
-            </tr>
-            }
-        </thead>
-        <tbody>
-            @foreach (var entity in Model)
-            {
+<!-- modal placeholder-->
+<div id='myModal' class='modal fade in'>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id='myModalContent'></div>
+        </div>
+    </div>
+</div>
 
-                <tr>
-                    <td>@entity.FirstName</td>
-                    <td>@entity.LastName</td>
-                    <td>@entity.DateOfBirth.ToShortDateString()</td>
-                </tr>
-            }
-        </tbody>
+<div class="panel panel-primary">
+    <div class="panel-heading">Actor</div>
+
+    <div class="panel-body ">
+        @Html.ActionLink("Add", "Create", "Actor", null, new { data_modal = "", id = "btnCreate", @class = "btn btn-small btn-primary pull-right" })
+    </div>
+
+    <table class="table table-bordered table-hover">
+        @foreach (var item in Model)
+        {
+            <tr>   
+                <td style="width:20px">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000" data-close-others="true">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Details", "Details", new { id = item.Id }, new { data_modal = "" })</li>
+                            <li>@Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { data_modal = "" })</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { data_modal = "" })</li>
+                        </ul>
+                    </div>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)  @Html.DisplayFor(modelItem => item.LastName)
+                    <div class="text-muted">
+                        <small>
+                            @Html.DisplayFor(modelItem => item.DateOfBirth)
+                        </small>
+                    </div>
+                </td>
+
+            </tr>
+        }
     </table>
+
+    <div class="panel-footer">Count = @Model.Count()</div>
 </div>
 
 
-
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/modalform")
+}
