--- a/MovieRentalOnline/MovieRentalOnline/Views/Shared/_Layout.cshtml
+++ b/MovieRentalOnline/MovieRentalOnline/Views/Shared/_Layout.cshtml
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@using MovieRentalOnline.Helper
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Modal Forms</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <meta name="description" content="The description of my page" />
+    <meta name="description" content="Fabro MVC 5 forms on Bootstrap 3 modals " />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,28 +19,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Modal Forms", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <ul class="nav navbar-nav">                        
+
                 </ul>
-                @Html.Partial("_LoginPartial")
+                @*@Html.Partial("_LoginPartial")*@
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <footer class="footer">
+        <div class="container">
+            <p class="pull-left">&copy; @DateTime.Now.Year - <a  target="_blank">MovieRental Online</a></p>
+            <p class="pull-right"><a id="scroll-to-top" style="display:none;" href="#" title="Przewiń na początek strony"><span class="glyphicon glyphicon-arrow-up"></span> </a></p>
+        </div>
+    </footer>
+
+    @Scripts.Render("~/bundles/jquery", "~/bundles/bootstrap", "~/bundles/site")
     @RenderSection("scripts", required: false)
 </body>
 </html>
